--- a/templates/index.html
+++ b/templates/index.html
@@ -159,7 +159,7 @@
         </div>
     </div>
 
-    <script src="/static/js/dashboard.js"></script>
+    <script src="/static/js/dashboard.js?v=3"></script>
 </body>
 
 </html>
