--- a/templates/submissions.html
+++ b/templates/submissions.html
@@ -97,7 +97,7 @@
             window.location.href = '/login';
         });
     </script>
-    <script src="/static/js/submissions.js"></script>
+    <script src="/static/js/submissions.js?v=3"></script>
 </body>
 
 </html>
